--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <meta http-equiv="refresh" content="0; url=/ExamplePro/WebContent/main.jsp" />
+<!doctype html>
+<html>
+  <head>
+    <title>This is the title of the webpage!</title>
+  </head>
+  <body>
+    <p>Test.</p>
+  </body>
+</html>
