--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<meta http-equiv="refresh" content="0; url=/ExamplePro/WebContent/main.jsp" />
+<! -- <meta http-equiv="refresh" content="0; url=/ExamplePro/WebContent/main.jsp" /> -->
 <html>
   <head>
     <title>This is the title of the webpage!</title>
